--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       <nav class="container">
         <a href="#" class="logo">
           <img
-            src="C:\Users\KENCH\WEBSITE\images\Strive logo.png"
+            src="images/Strive logo.png"
             alt="Strive Logo"
             style="height: 100px; width: auto; margin-right: 12px"
           />
