--- a/index.html
+++ b/index.html
@@ -622,101 +622,115 @@
           <div class="image-slider">
             <div class="slider-container">
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F088a06d1fbde4395a28c0a3ffa2d2072?format=webp&width=800"
-                alt="Cornell University"
+                src="C:\Users\KENCH\WEBSITE\images\Harvard.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2Ff79b80fd79f04827a2db8affc8d54c42?format=webp&width=800"
-                alt="Dartmouth College"
+                src="C:\Users\KENCH\WEBSITE\images\Stanford.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F460125d2a3224dce8ee65e365e2cd5ec?format=webp&width=800"
-                alt="Harvard University"
+                src="C:\Users\KENCH\WEBSITE\images\Princeton.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F07089221999f4491b5de9de17a50dabe?format=webp&width=800"
-                alt="Princeton University"
+                src="C:\Users\KENCH\WEBSITE\images\Yale.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2Fdba5e898b346485897813b67d6112f1e?format=webp&width=800"
-                alt="Stanford University"
+                src="C:\Users\KENCH\WEBSITE\images\Columbia.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F7a77644e3a3f46e4bb0117f5d4d68063?format=webp&width=800"
-                alt="University of Pennsylvania"
+                src="C:\Users\KENCH\WEBSITE\images\Penn.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F16dbe8f45dcc4e2c87688d4a26653b9c?format=webp&width=800"
-                alt="Yale University"
+                src="C:\Users\KENCH\WEBSITE\images\Cornell.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2Fa2e58aac63214da88eac760db76109e3?format=webp&width=800"
-                alt="Brown University"
+                src="C:\Users\KENCH\WEBSITE\images\Brown.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F28310e474df44ce29b0c8c53233f2724?format=webp&width=800"
-                alt="Columbia University"
+                src="C:\Users\KENCH\WEBSITE\images\Dartmouth.png"
+                class="university-logo"
+              />
+            </div>
+          </div>
+
+          
+          <div class="image-slider">
+            <div class="slider-container reverse">
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\Caltech.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\Duke.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\Rice.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\WashU.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\Emory.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\CMU.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\UCLA.png"
+                class="university-logo"
+              />
+              <img
+                src="C:\Users\KENCH\WEBSITE\images\Berkeley.png"
                 class="university-logo"
               />
 
               <!-- Duplicate for seamless scroll -->
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F088a06d1fbde4395a28c0a3ffa2d2072?format=webp&width=800"
-                alt="Cornell University"
+                src="C:\Users\KENCH\WEBSITE\images\Caltech.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2Ff79b80fd79f04827a2db8affc8d54c42?format=webp&width=800"
-                alt="Dartmouth College"
+                src="C:\Users\KENCH\WEBSITE\images\Duke.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F460125d2a3224dce8ee65e365e2cd5ec?format=webp&width=800"
-                alt="Harvard University"
+                src="C:\Users\KENCH\WEBSITE\images\Rice.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F07089221999f4491b5de9de17a50dabe?format=webp&width=800"
-                alt="Princeton University"
+                src="C:\Users\KENCH\WEBSITE\images\WashU.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2Fdba5e898b346485897813b67d6112f1e?format=webp&width=800"
-                alt="Stanford University"
+                src="C:\Users\KENCH\WEBSITE\images\Emory.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F7a77644e3a3f46e4bb0117f5d4d68063?format=webp&width=800"
-                alt="University of Pennsylvania"
+                src="C:\Users\KENCH\WEBSITE\images\CMU.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F16dbe8f45dcc4e2c87688d4a26653b9c?format=webp&width=800"
-                alt="Yale University"
+                src="C:\Users\KENCH\WEBSITE\images\UCLA.png"
                 class="university-logo"
               />
               <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2Fa2e58aac63214da88eac760db76109e3?format=webp&width=800"
-                alt="Brown University"
+                src="C:\Users\KENCH\WEBSITE\images\Berkeley.png"
                 class="university-logo"
               />
-              <img
-                src="https://cdn.builder.io/api/v1/image/assets%2F3d63b0a8c716483e8a2525979d52f772%2F28310e474df44ce29b0c8c53233f2724?format=webp&width=800"
-                alt="Columbia University"
-                class="university-logo"
-              />
-            </div>
           </div>
         </section>
-
         <!--section class="section">
           <h2>Achievements</h2>
 
