--- a/index.html
+++ b/index.html
@@ -622,39 +622,39 @@
           <div class="image-slider">
             <div class="slider-container">
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Harvard.png"
+                src="images/images/Harvard.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Stanford.png"
+                src="images/images/Stanford.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Princeton.png"
+                src="images/images/Princeton.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Yale.png"
+                src="images/images/Yale.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Columbia.png"
+                src="images/images/Columbia.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Penn.png"
+                src="images/images/Penn.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Cornell.png"
+                src="images/images/Brown.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Brown.png"
+                src="images/images/Cornell.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Dartmouth.png"
+                src="images/images/Dartmouth.png"
                 class="university-logo"
               />
             </div>
@@ -664,69 +664,67 @@
           <div class="image-slider">
             <div class="slider-container reverse">
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Caltech.png"
+                src="images/images/Caltech.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Duke.png"
+                src="images/images/Duke.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Rice.png"
+                src="images/images/Rice.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\WashU.png"
+                src="images/images/WashU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Emory.png"
+                src="images/images/Emory.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\CMU.png"
+                src="images/images/CMU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\UCLA.png"
+                src="images/images/UCLA.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Berkeley.png"
-                class="university-logo"
-              />
-
-              <!-- Duplicate for seamless scroll -->
-              <img
-                src="C:\Users\KENCH\WEBSITE\images\Caltech.png"
+                src="images/images/Berkeley.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Duke.png"
+                src="images/images/Caltech.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Rice.png"
+                src="images/images/Duke.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\WashU.png"
+                src="images/images/Rice.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Emory.png"
+                src="images/images/WashU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\CMU.png"
+                src="images/images/Emory.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\UCLA.png"
+                src="images/images/CMU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Berkeley.png"
+                src="images/images/UCLA.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Berkeley.png"
                 class="university-logo"
               />
           </div>
