Continuous loop - first row of images

--- a/index.html
+++ b/index.html
@@ -657,6 +657,42 @@
                 src="images/images/Dartmouth.png"
                 class="university-logo"
               />
+                            <img
+                src="images/images/Harvard.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Stanford.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Princeton.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Yale.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Columbia.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Penn.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Brown.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Cornell.png"
+                class="university-logo"
+              />
+              <img
+                src="images/images/Dartmouth.png"
+                class="university-logo"
+              />
             </div>
           </div>
 
