Update index.html images

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       <nav class="container">
         <a href="#" class="logo">
           <img
-            src="C:\Users\KENCH\WEBSITE\images\Strive logo.png"
+            src="images/images/Strive logo.png"
             alt="Strive Logo"
             style="height: 100px; width: auto; margin-right: 12px"
           />
@@ -732,75 +732,75 @@
           <div class="image-slider">
             <div class="slider-container">
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Harvard.png"
+                src="images/images/Harvard.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Stanford.png"
+                src="images/images/Stanford.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Princeton.png"
+                src="images/images/Princeton.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Yale.png"
+                src="images/images/Yale.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Columbia.png"
+                src="images/images/Columbia.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Penn.png"
+                src="images/images/Penn.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Cornell.png"
+                src="images/images/Cornell.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Brown.png"
+                src="images/images/Brown.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Dartmouth.png"
+                src="images/images/Dartmouth.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Harvard.png"
+                src="images/images/Harvard.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Stanford.png"
+                src="images/images/Stanford.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Princeton.png"
+                src="images/images/Princeton.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Yale.png"
+                src="images/images/Yale.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Columbia.png"
+                src="images/images/Columbia.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Penn.png"
+                src="images/images/Penn.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Cornell.png"
+                src="images/images/Cornell.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Brown.png"
+                src="images/images/Brown.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Dartmouth.png"
+                src="images/images/Dartmouth.png"
                 class="university-logo"
               />
             </div>
@@ -810,69 +810,69 @@
           <div class="image-slider">
             <div class="slider-container reverse">
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Caltech.png"
+                src="images/images/Caltech.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Duke.png"
+                src="images/images/Duke.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Rice.png"
+                src="images/images/Rice.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\WashU.png"
+                src="images/images/WashU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Emory.png"
+                src="images/images/Emory.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\CMU.png"
+                src="images/images/CMU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\UCLA.png"
+                src="images/images/UCLA.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Berkeley.png"
+                src="images/images/Berkeley.png"
                 class="university-logo"
               />
 
               <!-- Duplicate for seamless scroll -->
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Caltech.png"
+                src="images/images/Caltech.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Duke.png"
+                src="images/images/Duke.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Rice.png"
+                src="images/images/Rice.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\WashU.png"
+                src="images/images/WashU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Emory.png"
+                src="images/images/Emory.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\CMU.png"
+                src="images/images/CMU.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\UCLA.png"
+                src="images/images/UCLA.png"
                 class="university-logo"
               />
               <img
-                src="C:\Users\KENCH\WEBSITE\images\Berkeley.png"
+                src="images/images/Berkeley.png"
                 class="university-logo"
               />
           </div>
