--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
         border: 1px solid rgba(255, 255, 255, 0.1);
       }
 
+      @media (max-width: 768px) {
+        .hero {
+          font-size: 1.8rem; /* smaller font for tablets and phones */
+        }
+      }
+      
       #type-text {
         font-size: 4rem;
         font-weight: 700;
