--- a/index.html
+++ b/index.html
@@ -680,6 +680,11 @@
         font-family: "Inter", sans-serif;
       }
 
+      @media (max-width: 768px) {
+        .hero {
+          font-size: 1.8rem; /* smaller font for tablets and phones */
+        }
+      }
       /* Responsive Design */
       @media (max-width: 768px) {
         .nav-links {
