--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
                   </div>
                 </div>
               </div>
-        </section>
+        <!--/section>
 
         <section class="section" id="team">
           <h2>Our Team</h2>
@@ -1170,7 +1170,7 @@
               <p>Dylan's background includes USACO, AMC, and research projects, along with a portfolio of visual art and tech-based passion projects supporting communities in Africa. He’s all about helping others bring bold, original work to life.</p>
             </div>
           </div>
-        </section>
+      </section-->
         
         
       </main>
