--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Total Admit - College Consulting</title>
+    <title>Strive Consulting</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -861,7 +861,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services & Pricing</a></li>
-          <li><a href="#team">Our Team</a></li>
+          <!--li><a href="#team">Our Team</a></li-->
         </ul>
         <a href="#contact" class="cta-button">Free Consultation</a>
       </nav>
