--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
                       <h3>Full Application Reviews</h3>
-                      <p>We help organize your activities, write strong descriptions, and polish every little section of your application for maximum impact.</p>
+                      <p>We polish every little section of your application, from activity descriptions to compelling narratives, for maximum impact.</p>
                     </div>
                     <div class="flip-card-back">
                       <h3>Application Review</h3>
