--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,14 @@
                 class="university-logo"
               />
           </div>
+
+            <p>
+            Harvard University          Stanford University        Princeton University        Yale University        Columbia University
+            University of Pennsylvania  Cornell University         Brown University            Dartmouth College      Caltech
+            Duke University             Rice University            WashU                       Emory University       Carnegie Mellon
+            UC Berkeley                 UCLA                       Rest of the UCs
+
+            </p>
         </section>
           
         <!--section class="section">
