--- a/index.html
+++ b/index.html
@@ -1075,13 +1075,14 @@
               />
           </div>
 
-            <p>
-            Harvard University          Stanford University        Princeton University        Yale University        Columbia University
-            University of Pennsylvania  Cornell University         Brown University            Dartmouth College      Caltech
-            Duke University             Rice University            WashU                       Emory University       Carnegie Mellon
-            UC Berkeley                 UCLA                       Rest of the UCs
-
-            </p>
+            <ul>
+              <li>Harvard University</li><li>Stanford University</li><li>Princeton University</li>
+              <li>Yale University</li><li>Columbia University</li><li>University of Pennsylvania</li>
+              <li>Cornell University</li><li>Brown University</li><li>Dartmouth College</li>
+              <li>Caltech</li><li>Duke University</li><li>Rice University</li>
+              <li>WashU</li><li>Emory University</li><li>Carnegie Mellon</li>
+              <li>UC Berkeley</li><li>UCLA</li><li>Rest of the UCs</li>
+            </ul>
         </section>
           
         <!--section class="section">
