--- a/index.html
+++ b/index.html
@@ -1075,14 +1075,33 @@
               />
           </div>
 
+          <div style="display: flex; gap: 40px;">
             <ul>
-              <li>Harvard University</li><li>Stanford University</li><li>Princeton University</li>
-              <li>Yale University</li><li>Columbia University</li><li>University of Pennsylvania</li>
-              <li>Cornell University</li><li>Brown University</li><li>Dartmouth College</li>
-              <li>Caltech</li><li>Duke University</li><li>Rice University</li>
-              <li>WashU</li><li>Emory University</li><li>Carnegie Mellon</li>
-              <li>UC Berkeley</li><li>UCLA</li><li>Rest of the UCs</li>
+              <li>Harvard University</li>
+              <li>Yale University</li>
+              <li>Cornell University</li>
+              <li>Caltech</li>
+              <li>WashU</li>
+              <li>UC Berkeley</li>
             </ul>
+            <ul>
+              <li>Stanford University</li>
+              <li>Columbia University</li>
+              <li>Brown University</li>
+              <li>Duke University</li>
+              <li>Emory University</li>
+              <li>UCLA</li>
+            </ul>
+            <ul>
+              <li>Princeton University</li>
+              <li>University of Pennsylvania</li>
+              <li>Dartmouth College</li>
+              <li>Rice University</li>
+              <li>Carnegie Mellon</li>
+              <li>Rest of the UCs</li>
+            </ul>
+          </div>
+
         </section>
           
         <!--section class="section">
