--- a/index.html
+++ b/index.html
@@ -1075,32 +1075,37 @@
               />
           </div>
 
-          <div style="display: flex; gap: 40px;">
-            <ul>
-              <li>Harvard University</li>
-              <li>Yale University</li>
-              <li>Cornell University</li>
-              <li>Caltech</li>
-              <li>WashU</li>
-              <li>UC Berkeley</li>
-            </ul>
-            <ul>
-              <li>Stanford University</li>
-              <li>Columbia University</li>
-              <li>Brown University</li>
-              <li>Duke University</li>
-              <li>Emory University</li>
-              <li>UCLA</li>
-            </ul>
-            <ul>
-              <li>Princeton University</li>
-              <li>University of Pennsylvania</li>
-              <li>Dartmouth College</li>
-              <li>Rice University</li>
-              <li>Carnegie Mellon</li>
-              <li>Rest of the UCs</li>
-            </ul>
+          <div style="text-align: center; margin-top: 40px;">
+            <div style="display: inline-block; text-align: left;">
+              <div style="display: flex; gap: 60px; justify-content: center;">
+                <ul>
+                  <li>Harvard University</li>
+                  <li>Yale University</li>
+                  <li>Cornell University</li>
+                  <li>Caltech</li>
+                  <li>WashU</li>
+                  <li>UC Berkeley</li>
+                </ul>
+                <ul>
+                  <li>Stanford University</li>
+                  <li>Columbia University</li>
+                  <li>Brown University</li>
+                  <li>Duke University</li>
+                  <li>Emory University</li>
+                  <li>UCLA</li>
+                </ul>
+                <ul>
+                  <li>Princeton University</li>
+                  <li>University of Pennsylvania</li>
+                  <li>Dartmouth College</li>
+                  <li>Rice University</li>
+                  <li>Carnegie Mellon</li>
+                  <li>Rest of the UCs</li>
+                </ul>
+              </div>
+            </div>
           </div>
+
 
         </section>
           
