--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@
               <div class="acceptance-column">
                 <ul>
                   <li>Princeton University</li>
-                  <li>University of Pennsylvania</li>
+                  <li>Univ. of Pennsylvania</li>
                   <li>Dartmouth College</li>
                   <li>Rice University</li>
                   <li>Carnegie Mellon</li>
