--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
       .acceptance-container {
         text-align: center;
         margin-top: 40px;
+        padding-bottom: 40px;
       }
     
       .acceptance-columns {
